# pricehunter-lk

./: .gitignore  FIVE_PHASE_PLAN.md  PHASE_2_SOURCE_ADAPTERS.md  PHASE_3_REAL_SOURCE_FOUNDATION.md  PRODUCT_PIVOT.md  PROJECT_PLAN.md  README.md  pyproject.toml
examples/: young_protege_items.txt
src/pricehunter/: __init__.py  adapters.py  api.py  cli.py  engine.py  exporters.py  models.py  parser.py  ranges.py  scraping.py  source_registry.py  sources.py
tests/: test_adapters.py  test_api.py  test_engine.py  test_exporters.py  test_parser.py  test_ranges.py  test_scraping.py
web/: package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: phase-one-showcase.tsx  price-search.tsx
web/lib/: mock-price.ts  price-api.ts  search-history.ts
