[project]
name = "pricehunter-lk"
version = "0.1.0"
description = "Sri Lankan price research assistant for sourced budget comparisons"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Shagee", email = "185689517+ShageeshanT@users.noreply.github.com" }]
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[project.scripts]
pricehunter = "pricehunter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pricehunter"]

[tool.hatch.build.targets.editable]
packages = ["src/pricehunter"]
